--- a/src/main/resources/templates/viewProductsList.html
+++ b/src/main/resources/templates/viewProductsList.html
@@ -25,7 +25,7 @@
 <header>
     <nav class="navbar navbar-expand-lg navbar-dark bg-black">
         <div class="container">
-            <a class="navbar-brand logo">RecantoGeek</a>
+            <a class="navbar-brand logo" href="/products">RecantoGeek</a>
             <div class="collapse navbar-collapse nav-search" id="navbarNav">
                 <div class="div-search">
                     <form class="d-flex search-form">
@@ -35,18 +35,17 @@
                     </form>
                 </div>
                 <div class="dropdown myAccount">
-                    <button class="btn dropdown-toggle" type="button" id="dropdownMenuButton2" data-bs-toggle="dropdown"
+                    <button class="btn dropdown-toggle" type="button" id="dropdownMenu" data-bs-toggle="dropdown"
                             aria-expanded="false">
                         Minha Conta
                     </button>
-                    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton2">
-                        <li><a class="dropdown-item active" href="#">Action</a></li>
-                        <li><a class="dropdown-item" href="#">Another action</a></li>
-                        <li><a class="dropdown-item" href="#">Something else here</a></li>
+                    <ul class="dropdown-menu" aria-labelledby="dropdownMenu">
+                        <li><a class="dropdown-item" href="#">Login</a></li>
+                        <li><a class="dropdown-item" href="#">Register</a></li>
                         <li>
                             <hr class="dropdown-divider">
                         </li>
-                        <li><a class="dropdown-item" href="#">Separated link</a></li>
+                        <li><a class="dropdown-item" href="/products/newproduct">Adicionar Produto</a></li>
                     </ul>
                     <i class="material-icons-outlined shopping-cart nav-item ">shopping_cart</i>
                 </div>
@@ -56,31 +55,29 @@
         </div>
 
     </nav>
-    <div class="menu">
+    <div class="menu border-bottom">
         <div class="container">
-            <ul class="nav nav-tabs">
+            <ul class="nav">
 
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button"
-                       aria-expanded="false"><span class="material-icons-outlined">reorder</span>&nbsp;All Categories</a>
+                       aria-expanded="false"><span class="material-icons-outlined">reorder</span>&nbsp;All
+                        Categorias</a>
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="#">Action</a></li>
-                        <li><a class="dropdown-item" href="#">Another action</a></li>
-                        <li><a class="dropdown-item" href="#">Something else here</a></li>
-                        <li>
-                            <hr class="dropdown-divider">
-                        </li>
-                        <li><a class="dropdown-item" href="#">Separated link</a></li>
+                        <li><a class="dropdown-item" href="#">Livros</a></li>
+                        <li><a class="dropdown-item" href="#">Vestuario</a></li>
+                        <li><a class="dropdown-item" href="#">Colecionaveis</a></li>
+                        <li><a class="dropdown-item" href="#">Decorações</a></li>
                     </ul>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link " href="#">Products</a>
+                    <a class="nav-link " href="#">Produtos</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link " href="#">Client List</a>
+                    <a class="nav-link " href="#">Lista de Clientes</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link " href="#">Contact Us</a>
+                    <a class="nav-link " href="#">Contate-Nos</a>
                 </li>
         </div>
     </div>
@@ -88,18 +85,18 @@
 </header>
 <article>
     <div class="container">
-        <ol class="breadcrumb">
-            <li class="breadcrumb-item">Home</li>
-            <li class="breadcrumb-item active" aria-current="page">Products</li>
+        <ol class="breadcrumb mt-0 pt-2">
+            <li class="breadcrumb-item">Página Inicial</li>
+            <li class="breadcrumb-item active" aria-current="page">Produtos</li>
         </ol>
-        <p class="h4" style>All Products</p>
+        <p class="h4" style>Todos Produtos</p>
         <div class="row container-products">
             <div class="card card-all" th:each="product : ${productsList}">
                 <a class="item-link" th:href="@{/products/{id}(id=${product.id})}">
                     <img th:src="@{/images/moleton.jpg}" class="card-img-top product-image" th:alt="${product.name}">
-                    <div class="card-body">
-                        <h5 class="card-title" th:text="${product.name}"></h5>
-                        <p class="card-text" th:text="${product.price}"></p>
+                    <div class="card-body card-desc">
+                        <h5 class="card-title name" th:text="${product.name}"></h5>
+                        <p class="card-text price" th:text="'$ ' + ${product.price}"></p>
                     </div>
                 </a>
             </div>
@@ -108,6 +105,20 @@
     </div>
 
 </article>
+
+<div class="container">
+    <footer class="py-3 my-4">
+        <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+            <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Home</a></li>
+            <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Features</a></li>
+            <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Pricing</a></li>
+            <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">FAQs</a></li>
+            <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">About</a></li>
+        </ul>
+        <p class="text-center text-muted">&copy; 2021 Company, Inc</p>
+    </footer>
+</div>
+
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
