--- a/src/main/resources/templates/viewProductsList.html
+++ b/src/main/resources/templates/viewProductsList.html
@@ -29,9 +29,9 @@
             <div class="collapse navbar-collapse nav-search" id="navbarNav">
                 <div class="div-search">
                     <form class="d-flex search-form">
-                        <input class="form-control me-2" type="search" placeholder="What are you looking for?"
+                        <input class="form-control me-2" type="search" placeholder="O que você está procurando ?"
                                aria-label="Search">
-                        <button class="btn btn-light" type="submit">Search</button>
+                        <button class="btn btn-light" type="submit">Buscar</button>
                     </form>
                 </div>
                 <div class="dropdown myAccount">
@@ -79,6 +79,7 @@
                 <li class="nav-item">
                     <a class="nav-link " href="#">Contate-Nos</a>
                 </li>
+            </ul>
         </div>
     </div>
 
