--- a/src/main/resources/templates/viewProductsList.html
+++ b/src/main/resources/templates/viewProductsList.html
@@ -97,7 +97,7 @@
                     <img th:src="@{/images/moleton.jpg}" class="card-img-top product-image" th:alt="${product.name}">
                     <div class="card-body card-desc">
                         <h5 class="card-title name" th:text="${product.name}"></h5>
-                        <p class="card-text price" th:text="'$ ' + ${product.price}"></p>
+                        <p class="card-text price" th:text="${#numbers.formatCurrency(product.price)}"></p>
                     </div>
                 </a>
             </div>
