--- a/src/main/resources/templates/viewProduct.html
+++ b/src/main/resources/templates/viewProduct.html
@@ -102,8 +102,8 @@
             <div class="card border-0" style="width: 25rem;">
                 <div class="card-body">
                     <h3 class="title-product" th:text="${product.name}"></h3>
-                    <h2 class="price-product" th:text="'$ ' + ${product.price}"></h2>
-                    <p>ou <span th:text="${product.price} < 30 ? 7x: 12x "></span> sem juros de $<span th:text="${product.installments}"></span></p>
+                    <h2 class="price-product" th:text="${#numbers.formatCurrency(product.price)}"></h2>
+                    <p>ou <span th:text="${product.price} < 30 ? 7x: 12x "></span> sem juros de <span th:text="${#numbers.formatCurrency(product.installments)}"></span></p>
                     <button type="button" class="btn btn-primary btn-custom" data-bs-toggle="modal"
                             data-bs-target="#staticBackdrop">
                         Editar
