--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -5,11 +5,11 @@
     <title>Title</title>
 </head>
 <body>
-<h1 th:text="${error.timestamp}"></h1>
+<!--<h1 th:text="${error.timestamp}"></h1>
 <h1 th:text="${error.status}"></h1>
 <h1 th:text="${error.error}"></h1>
 <h1 th:text="${error.message}"></h1>
-<h1 th:text="${error.path}"></h1>
+<h1 th:text="${error.path}"></h1>-->
 
 </body>
 </html>
