--- a/src/main/resources/templates/newproduct.html
+++ b/src/main/resources/templates/newproduct.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html xmlns:th="http://thymeleaf.org">
+<html xmlns:th="http://thymeleaf.org" xmlns="http://www.w3.org/1999/html">
 
 <head>
     <!-- Required meta tags -->
@@ -20,7 +20,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;700&display=swap" rel="stylesheet">
-    <title>Recanto Geek</title>
+    <!-- include libraries(jQuery, bootstrap) -->
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+            integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+            crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote-lite.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote-lite.min.js"></script>
 </head>
 <body>
 <header>
@@ -88,20 +93,45 @@
 <article class="bg-white">
 
     <div class="container">
-        <h1 class="pt-3 pb-3">Adicionar um novo Produto</h1>
-        <form method="post" action="#" th:object="${product}">
+        <ol class="breadcrumb mt-0 pt-2">
+            <li class="breadcrumb-item">Home</li>
+            <li class="breadcrumb-item"><a href="/products">Products</a></li>
+            <li class="breadcrumb-item active" aria-current="page">Adicionar novo produto</li>
+        </ol>
+        <h1 class="pb-3">Adicionar um novo Produto</h1>
+        <form method="post" action="#" th:object="${product}" class="needs-validation" novalidate>
+
+
             <div class="mb-3">
                 <label for="name" class="form-label">Nome do Produto</label>
-                <input type="text" class="form-control" id="name" placeholder="Digite o nome do produto" name="name" required >
+                <input type="text" class="form-control" id="name" placeholder="Digite o nome do produto"
+                       name="name" required>
                 <div class="invalid-feedback">
-                    Por favor digite um produto.
+                    Por favor digite o nome do produto.
                 </div>
             </div>
             <div class="mb-3">
                 <label for="price" class="form-label">Preço</label>
-                <input type="number" class="form-control" id="price" placeholder="Digite o preço" name="price" onchange="setTwoNumberDecimal" min="0" max="5000" step="0.25" value="0.00" required >
+                <input type="number" class="form-control" id="price" placeholder="Digite o preço do produto" name="price"
+                       onchange="setTwoNumberDecimal" min="0" max="5000" step="0.01" required>
                 <div class="invalid-feedback">
-                    Por favor digite um preço.
+                    Por favor digite o preço do produto.
+                </div>
+            </div>
+            <div class="mb-3">
+                <label for="imageURL" class="form-label">Imagem do Produto</label>
+                <input type="text" class="form-control" id="imageURL" placeholder="Inserir link da imagem do produto"
+                       name="imageURL" required>
+                <div class="invalid-feedback">
+                    Por favor inserir link da imagem do produto
+                </div>
+            </div>
+            <div class="mb-3">
+                <label for="summernote" class="form-label">Descrição</label>
+                <textarea id="summernote" type="text" class="form-control" name="description"
+                          required></textarea>
+                <div class="invalid-feedback">
+                    Por favor inserir a descrição do produto.
                 </div>
             </div>
 
@@ -124,6 +154,34 @@
         <p class="text-center text-muted">&copy; 2021 Company, Inc</p>
     </footer>
 </div>
+
+<script>
+    $('#summernote').summernote({
+        placeholder: 'Inserir a descrição do produto',
+        tabsize: 2,
+        height: 300
+    });
+</script>
+<script>
+// Example starter JavaScript for disabling form submissions if there are invalid fields
+(() => {
+  'use strict';
+
+  // Fetch all the forms we want to apply custom Bootstrap validation styles to
+  const forms = document.querySelectorAll('.needs-validation');
+
+  // Loop over them and prevent submission
+  Array.prototype.slice.call(forms).forEach((form) => {
+    form.addEventListener('submit', (event) => {
+      if (!form.checkValidity()) {
+        event.preventDefault();
+        event.stopPropagation();
+      }
+      form.classList.add('was-validated');
+    }, false);
+  });
+})();
+</script>
 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
