--- a/src/main/resources/templates/viewProduct.html
+++ b/src/main/resources/templates/viewProduct.html
@@ -20,6 +20,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;700&display=swap" rel="stylesheet">
+    <!-- include libraries(jQuery, bootstrap) -->
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+            integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+            crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote-lite.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote-lite.min.js"></script>
     <title>Recanto Geek</title>
 </head>
 <body>
@@ -103,8 +109,9 @@
                 <div class="card-body">
                     <h3 class="title-product" th:text="${product.name}"></h3>
                     <h2 class="price-product" th:text="${#numbers.formatCurrency(product.price)}"></h2>
-                    <p>ou <span th:text="${product.price} < 30 ? 7x: 12x "></span> sem juros de <span th:text="${#numbers.formatCurrency(product.installments)}"></span></p>
-                    <p th:text="${product.description}" class="fw-light lh-base"></p>
+                    <p>ou <span th:text="${product.price} < 30 ? 7x: 12x "></span> sem juros de <span
+                            th:text="${#numbers.formatCurrency(product.installments)}"></span></p>
+                    <p th:utext="${product.description}" class="fw-light lh-base"></p>
                     <button type="button" class="btn btn-primary btn-custom" data-bs-toggle="modal"
                             data-bs-target="#staticBackdrop">
                         Editar
@@ -132,22 +139,51 @@
                 <h5 class="modal-title" id="staticBackdropLabel">Modal title</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
-            <form method="post" th:action="@{update}" th:object="${product}">
+            <form method="post" action="#" th:object="${product}" class="needs-validation" novalidate>
+                <input type="hidden" th:field="${product.id}"/>
                 <div class="modal-body">
                     <div class="mb-3">
-                        <input type="hidden" th:field="${product.id}"/>
-                        <label for="name" class="form-label">Name</label>
-                        <input type="text" class="form-control" id="name" placeholder="Name *" name="name">
+                        <label for="name" class="form-label">Nome do Produto</label>
+                        <input type="text" class="form-control" id="name" placeholder="Digite o nome do produto"
+                               name="name" required>
+                        <div class="invalid-feedback">
+                            Por favor digite o nome do produto.
+                        </div>
+                    </div>
+                    <div class="mb-3">
+                        <label for="price" class="form-label">Preço</label>
+                        <input type="number" class="form-control" id="price" placeholder="Digite o preço do produto"
+                               name="price"
+                               onchange="setTwoNumberDecimal" min="0" max="5000" step="0.01" required>
+                        <div class="invalid-feedback">
+                            Por favor digite o preço do produto.
+                        </div>
+                    </div>
+                    <div class="mb-3">
+                        <label for="imageURL" class="form-label">Imagem do produto</label>
+                        <input type="text" class="form-control" id="imageURL"
+                               placeholder="Inserir link da imagem do produto"
+                               name="imageURL" required>
+                        <div class="invalid-feedback">
+                            Por favor inserir link da imagem do produto
+                        </div>
+                    </div>
+                    <div class="mb-3">
+                        <label for="summernote" class="form-label">Descrição</label>
+                        <textarea id="summernote" type="text" class="form-control" name="description"
+                                  required></textarea>
+                        <div class="invalid-feedback">
+                            Por favor inserir a descrição do produto.
+                        </div>
+                    </div>
 
-                        <label for="price" class="form-label">Price</label>
-                        <input type="text" class="form-control" id="price" placeholder="Price *" name="price">
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
+                        <button type="submit" value="Submit" class="btn btn-primary">Salvar</button>
                     </div>
                 </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
-                    <button type="submit" value="Submit" class="btn btn-primary">Salvar</button>
-                </div>
             </form>
+
         </div>
 
     </div>
@@ -167,7 +203,43 @@
     </footer>
 </div>
 
+<script>
+    $('#summernote').summernote({
+        placeholder: 'Inserir a descrição do produto',
+        tabsize: 1,
+        height: 200,
+        toolbar: [
+          ['style', ['style']],
+          ['font', ['bold', 'underline', 'clear']],
+          ['color', ['color']],
+          ['para', ['ul', 'ol', 'paragraph']],
+        ]
+    });
 
+
+
+</script>
+<script>
+// Example starter JavaScript for disabling form submissions if there are invalid fields
+(() => {
+  'use strict';
+
+  // Fetch all the forms we want to apply custom Bootstrap validation styles to
+  const forms = document.querySelectorAll('.needs-validation');
+
+  // Loop over them and prevent submission
+  Array.prototype.slice.call(forms).forEach((form) => {
+    form.addEventListener('submit', (event) => {
+      if (!form.checkValidity()) {
+        event.preventDefault();
+        event.stopPropagation();
+      }
+      form.classList.add('was-validated');
+    }, false);
+  });
+})();
+
+</script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
