--- a/src/main/resources/templates/viewProduct.html
+++ b/src/main/resources/templates/viewProduct.html
@@ -94,8 +94,9 @@
 <article class="bg-white">
     <div class="container">
         <ol class="breadcrumb mt-0 pt-2">
-            <li class="breadcrumb-item">Home</li>
-            <li class="breadcrumb-item"><a href="/products">Products</a></li>
+            <li class="breadcrumb-item">Página Inicial</li>
+            <li class="breadcrumb-item"><a href="/products">Produto</a></li>
+            <li class="breadcrumb-item"><a href="#">Categoria</a></li>
             <li class="breadcrumb-item active" aria-current="page" th:text="${product.name}"></li>
         </ol>
         <p class="h4" th:alt="${product.name}"></p>
