--- a/src/main/resources/templates/newproduct.html
+++ b/src/main/resources/templates/newproduct.html
@@ -67,13 +67,9 @@
 
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button"
-                       aria-expanded="false"><span class="material-icons-outlined">reorder</span>&nbsp;All
-                        Categorias</a>
+                       aria-expanded="false"><span class="material-icons-outlined">reorder</span>&nbsp;Todas Categorias</a>
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="#">Livros</a></li>
-                        <li><a class="dropdown-item" href="#">Vestuario</a></li>
-                        <li><a class="dropdown-item" href="#">Colecionaveis</a></li>
-                        <li><a class="dropdown-item" href="#">Decorações</a></li>
+                        <li><a class="dropdown-item" th:each="category : ${categoryList}" th:href="@{/products/category/{id}(id=${category.id})}"  th:text="${category.name}"></a></li>
                     </ul>
                 </li>
                 <li class="nav-item">
