--- a/src/main/resources/templates/viewProduct.html
+++ b/src/main/resources/templates/viewProduct.html
@@ -68,13 +68,9 @@
 
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button"
-                       aria-expanded="false"><span class="material-icons-outlined">reorder</span>&nbsp;All
-                        Categorias</a>
+                       aria-expanded="false"><span class="material-icons-outlined">reorder</span>&nbsp;Todas Categorias</a>
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="#">Livros</a></li>
-                        <li><a class="dropdown-item" href="#">Vestuario</a></li>
-                        <li><a class="dropdown-item" href="#">Colecionaveis</a></li>
-                        <li><a class="dropdown-item" href="#">Decorações</a></li>
+                        <li><a class="dropdown-item" th:each="category : ${categoryList}" th:href="@{/products/category/{id}(id=${category.id})}"  th:text="${category.name}"></a></li>
                     </ul>
                 </li>
                 <li class="nav-item">
@@ -96,7 +92,7 @@
         <ol class="breadcrumb mt-0 pt-2">
             <li class="breadcrumb-item">Página Inicial</li>
             <li class="breadcrumb-item"><a href="/products">Produto</a></li>
-            <li class="breadcrumb-item"><a href="#">Categoria</a></li>
+            <li class="breadcrumb-item"><a th:text="${product.category?.name}" th:href="@{/products/category/{id}(id=${product.category?.id})}"></a></li>
             <li class="breadcrumb-item active" aria-current="page" th:text="${product.name}"></li>
         </ol>
         <p class="h4" th:alt="${product.name}"></p>
