--- a/src/main/resources/templates/viewProductsList.html
+++ b/src/main/resources/templates/viewProductsList.html
@@ -61,8 +61,7 @@
 
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button"
-                       aria-expanded="false"><span class="material-icons-outlined">reorder</span>&nbsp;All
-                        Categorias</a>
+                       aria-expanded="false"><span class="material-icons-outlined">reorder</span>&nbsp;Todas Categorias</a>
                     <ul class="dropdown-menu">
                         <li><a class="dropdown-item" th:each="category : ${categoryList}" th:href="@{/products/category/{id}(id=${category.id})}"  th:text="${category.name}"></a></li>
                      </ul>
