--- a/src/main/resources/templates/viewProduct.html
+++ b/src/main/resources/templates/viewProduct.html
@@ -70,7 +70,9 @@
                     <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button"
                        aria-expanded="false"><span class="material-icons-outlined">reorder</span>&nbsp;Todas Categorias</a>
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" th:each="category : ${categoryList}" th:href="@{/products/category/{id}(id=${category.id})}"  th:text="${category.name}"></a></li>
+                        <li><a class="dropdown-item" th:each="category : ${categoryList}"
+                               th:href="@{/products/category/{id}(id=${category.id})}" th:text="${category.name}"></a>
+                        </li>
                     </ul>
                 </li>
                 <li class="nav-item">
@@ -92,7 +94,8 @@
         <ol class="breadcrumb mt-0 pt-2">
             <li class="breadcrumb-item">Página Inicial</li>
             <li class="breadcrumb-item"><a href="/products">Produto</a></li>
-            <li class="breadcrumb-item"><a th:text="${product.category?.name}" th:href="@{/products/category/{id}(id=${product.category?.id})}"></a></li>
+            <li class="breadcrumb-item"><a th:text="${product.category?.name}"
+                                           th:href="@{/products/category/{id}(id=${product.category?.id})}"></a></li>
             <li class="breadcrumb-item active" aria-current="page" th:text="${product.name}"></li>
         </ol>
         <p class="h4" th:alt="${product.name}"></p>
@@ -136,42 +139,37 @@
                 <h5 class="modal-title" id="staticBackdropLabel">Modal title</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
-            <form method="post" action="#" th:object="${product}" class="needs-validation" novalidate>
+            <form id="myform" method="post" th:action="@{update}" th:object="${product}">
                 <input type="hidden" th:field="${product.id}"/>
                 <div class="modal-body">
                     <div class="mb-3">
                         <label for="name" class="form-label">Nome do Produto</label>
                         <input type="text" class="form-control" id="name" placeholder="Digite o nome do produto"
-                               name="name" required>
-                        <div class="invalid-feedback">
-                            Por favor digite o nome do produto.
-                        </div>
+                               name="name">
                     </div>
                     <div class="mb-3">
                         <label for="price" class="form-label">Preço</label>
                         <input type="number" class="form-control" id="price" placeholder="Digite o preço do produto"
                                name="price"
-                               onchange="setTwoNumberDecimal" min="0" max="5000" step="0.01" required>
-                        <div class="invalid-feedback">
-                            Por favor digite o preço do produto.
-                        </div>
+                               onchange="setTwoNumberDecimal" min="0" max="5000" step="0.01">
                     </div>
                     <div class="mb-3">
                         <label for="imageURL" class="form-label">Imagem do produto</label>
                         <input type="text" class="form-control" id="imageURL"
                                placeholder="Inserir link da imagem do produto"
-                               name="imageURL" required>
-                        <div class="invalid-feedback">
-                            Por favor inserir link da imagem do produto
-                        </div>
+                               name="imageURL">
+                    </div>
+                    <div class="mb-3">
+                        <label for="category" class="form-label">Selecione uma categoria</label>
+                        <select id="category" class="form-select form-control" form="myform" name="category"
+                                aria-label="Default select example">
+                            <option th:value="${category.id}" th:each="category : ${categoryList}"><span
+                                    th:text="${category.name}"></span></option>
+                        </select>
                     </div>
                     <div class="mb-3">
                         <label for="summernote" class="form-label">Descrição</label>
-                        <textarea id="summernote" type="text" class="form-control" name="description"
-                                  required></textarea>
-                        <div class="invalid-feedback">
-                            Por favor inserir a descrição do produto.
-                        </div>
+                        <textarea id="summernote" type="text" class="form-control" name="description"></textarea>
                     </div>
 
                     <div class="modal-footer">
@@ -215,6 +213,8 @@
 
 
 
+
+
 </script>
 <script>
 // Example starter JavaScript for disabling form submissions if there are invalid fields
@@ -235,6 +235,8 @@
     }, false);
   });
 })();
+
+
 
 </script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
